<resources>
    <string name="app_name">Shoe Store</string>
    <string name="password_label">Password</string>
    <string name="email_label">E-mail</string>
    <string name="email_field_hint">e-mail</string>
    <string name="shoe_list_button">Shoe List</string>
    <string name="new_login">New Login</string>
    <string name="login">Login</string>
    <string name="two_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="one_text">Welcome</string>
    <string name="instruction_button">Instructions</string>
    <string name="instruction_label">Instruction</string>
    <string name="instruction_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="fab_add_new_shoe">adds new shoe</string>
    <string name="shoe_list_fragment_name">Shoe List</string>
    <string name="fragment_label_shoe_list">Shoe List</string>
    <string name="fragment_label_instructions">Instructions</string>
    <string name="fragment_label_welcome">Welcome to Shoe Store</string>
    <string name="fragment_label_login">Login</string>
    <string name="fragment_shoe_list">Shoe List</string>
    <string name="fragment_shoe_details">Shoe Details</string>
    <string name="menu_logout">Logout</string>
    <string name="shoe_name_label">Shoe name</string>
    <string name="company_label">Company</string>
    <string name="size_label">Size</string>
    <string name="desc_label">Description</string>
    <string name="name_edit">Name</string>
    <string name="company_edit">Company</string>
    <string name="size_edit">Shoe size</string>
    <string name="desc_edit">Describe shoes</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
</resources>
