<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <!--The fragment consist views located vertically. LinearLayout should be enough-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".instruction.InstructionFragment">

        <TextView
            android:id="@+id/instr_label"
            style="@style/label_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/label_margin"
            android:text="@string/instruction_label" />

        <TextView
            android:id="@+id/instruction_text"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/instruction_text" />

        <Button
            android:id="@+id/button_to_shoe_list"
            style="@style/button_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/top_margin"
            android:background="@drawable/rounded_button"
            android:text="@string/shoe_list_button" />
    </LinearLayout>
</layout>